force-app/main/default/objects/Major_Sport_Venues__c/Major_Sport_Venues__c.object-meta.xml
<CustomObject>
    <label>Major_Sport_Venues</label>
    <nameField>
        <label>Major_Sport_Venues</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Major_Sport_Venues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>