force-app/main/default/objects/Major_Sport_Venues__c/fields/COLOR__c.field-meta.xml
<CustomField>
    <fullName>COLOR__c</fullName>
    <label>COLOR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>