force-app/main/default/objects/Major_Sport_Venues__c/fields/COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY__c</fullName>
    <label>COUNTRY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>