force-app/main/default/objects/Major_Sport_Venues__c/fields/COUNTY__c.field-meta.xml
<CustomField>
    <fullName>COUNTY__c</fullName>
    <label>COUNTY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>