force-app/main/default/objects/Major_Sport_Venues__c/fields/COUNTYFIPS__c.field-meta.xml
<CustomField>
    <fullName>COUNTYFIPS__c</fullName>
    <label>COUNTYFIPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>