force-app/main/default/objects/Major_Sport_Venues__c/fields/FORMERNM__c.field-meta.xml
<CustomField>
    <fullName>FORMERNM__c</fullName>
    <label>FORMERNM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>