force-app/main/default/objects/Major_Sport_Venues__c/fields/NAICS_CODE__c.field-meta.xml
<CustomField>
    <fullName>NAICS_CODE__c</fullName>
    <label>NAICS_CODE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>