force-app/main/default/objects/Major_Sport_Venues__c/fields/NAICS_DESC__c.field-meta.xml
<CustomField>
    <fullName>NAICS_DESC__c</fullName>
    <label>NAICS_DESC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>