force-app/main/default/objects/Major_Sport_Venues__c/fields/NAME2__c.field-meta.xml
<CustomField>
    <fullName>NAME2__c</fullName>
    <label>NAME2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>