force-app/main/default/objects/Major_Sport_Venues__c/fields/NAME3__c.field-meta.xml
<CustomField>
    <fullName>NAME3__c</fullName>
    <label>NAME3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>