force-app/main/default/objects/Major_Sport_Venues__c/fields/OBJECTID__c.field-meta.xml
<CustomField>
    <fullName>OBJECTID__c</fullName>
    <label>OBJECTID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>