force-app/main/default/objects/Major_Sport_Venues__c/fields/POPULATION__c.field-meta.xml
<CustomField>
    <fullName>POPULATION__c</fullName>
    <label>POPULATION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>