force-app/main/default/objects/Major_Sport_Venues__c/fields/SOURCE__c.field-meta.xml
<CustomField>
    <fullName>SOURCE__c</fullName>
    <label>SOURCE</label>
    <type>Url</type>
</CustomField>