force-app/main/default/objects/Major_Sport_Venues__c/fields/SOURCEDATE__c.field-meta.xml
<CustomField>
    <fullName>SOURCEDATE__c</fullName>
    <label>SOURCEDATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>