force-app/main/default/objects/Major_Sport_Venues__c/fields/STATE__c.field-meta.xml
<CustomField>
    <fullName>STATE__c</fullName>
    <label>STATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>