force-app/main/default/objects/Major_Sport_Venues__c/fields/STATUS__c.field-meta.xml
<CustomField>
    <fullName>STATUS__c</fullName>
    <label>STATUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>