force-app/main/default/objects/Major_Sport_Venues__c/fields/TELEPHONE__c.field-meta.xml
<CustomField>
    <fullName>TELEPHONE__c</fullName>
    <label>TELEPHONE</label>
    <type>Phone</type>
</CustomField>