force-app/main/default/objects/Major_Sport_Venues__c/fields/VAL_DATE__c.field-meta.xml
<CustomField>
    <fullName>VAL_DATE__c</fullName>
    <label>VAL_DATE</label>
    <type>DateTime</type>
</CustomField>