force-app/main/default/objects/Major_Sport_Venues__c/fields/VAL_METHOD__c.field-meta.xml
<CustomField>
    <fullName>VAL_METHOD__c</fullName>
    <label>VAL_METHOD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>