force-app/main/default/objects/Major_Sport_Venues__c/fields/VENUEID__c.field-meta.xml
<CustomField>
    <fullName>VENUEID__c</fullName>
    <label>VENUEID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>