force-app/main/default/objects/Major_Sport_Venues__c/fields/YEARCHNG__c.field-meta.xml
<CustomField>
    <fullName>YEARCHNG__c</fullName>
    <label>YEARCHNG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>