force-app/main/default/objects/Major_Sport_Venues__c/fields/ZIP4__c.field-meta.xml
<CustomField>
    <fullName>ZIP4__c</fullName>
    <label>ZIP4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>