force-app/main/default/objects/Major_Sport_Venues__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAICS_DESC__c</columns>
    <columns>COLOR__c</columns>
    <columns>NAME</columns>
    <columns>NAME__c</columns>
    <columns>ADDRESS__c</columns>
    <columns>CITY__c</columns>
    <columns>STATE__c</columns>
    <columns>ZIP__c</columns>
    <columns>ZIP4__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>